// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing Credentials component should snapshot works with english language 1`] = `
<div
  aria-hidden="true"
>
  <div
    class="MuiBox-root MuiBox-root Component-root Component-root"
  >
    <div
      class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary Component-root Component-root mui-fixed MuiPaper-elevation4"
      style="padding-right: 16px;"
    >
      <div
        class="MuiToolbar-root MuiToolbar-regular WithStyles(ForwardRef(Toolbar))-root"
      >
        <div
          class="MuiContainer-root Component-root Component-root MuiContainer-maxWidthMd"
        >
          <div
            class="MuiBox-root MuiBox-root Component-root Component-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
            data-testid="button-header-logo"
            title="To main page"
          >
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover Component-root Component-root MuiTypography-colorPrimary"
              href="/front/credentials"
            >
              <img
                alt="Header logo"
                class="img-root img-root"
                src=""
              />
            </a>
          </div>
          <div
            class="MuiBox-root MuiBox-root Component-root Component-root"
          >
            <button
              aria-controls="menu"
              aria-haspopup="true"
              aria-label="Menu"
              class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
              data-testid="header-menu"
              tabindex="0"
              title="Menu"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <span
                  class="MuiBadge-root Component-root Component-root"
                  data-testid="badge-notifications"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                    />
                  </svg>
                  <span
                    class="MuiBadge-badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorSecondary MuiBadge-invisible"
                  >
                    0
                  </span>
                </span>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <div
              aria-hidden="true"
              class="MuiPopover-root WithStyles(ForwardRef(Popover))-root"
              data-testid="popover-invisible-div"
              id="menu"
              role="presentation"
              style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px; visibility: hidden;"
            >
              <div
                data-test="sentinelStart"
                tabindex="0"
              />
              <div
                class="MuiPaper-root MuiPopover-paper MuiPaper-elevation8 MuiPaper-rounded"
                style="opacity: 0; transform: scale(0.75, 0.5625); visibility: hidden;"
                tabindex="-1"
              >
                <div
                  class="MuiBox-root MuiBox-root Component-root Component-root"
                >
                  <div
                    class="MuiBox-root MuiBox-root Component-root Component-root"
                  >
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                    >
                      Username
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-noWrap"
                    >
                      testecrudcredential
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                    >
                      Server
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-noWrap"
                    >
                      http://sso:3000
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                    >
                      Expires at
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                    >
                      15/06/2020 11:39
                    </p>
                    <div
                      class="MuiBox-root MuiBox-root Component-root Component-root"
                    >
                      <div
                        class="MuiBox-root MuiBox-root Component-root Component-root"
                      >
                        <button
                          aria-label="Portuguese"
                          class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
                          data-testid="change-language-portuguese"
                          tabindex="0"
                          title="Portuguese"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <img
                              alt="Brasil flag"
                              class="img-root img-root"
                              src=""
                            />
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-label="English"
                          class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
                          data-testid="change-language-english"
                          tabindex="0"
                          title="English"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <img
                              alt="United Kingdom flag"
                              class="img-root img-root"
                              src=""
                            />
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-label="Spanish"
                          class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
                          data-testid="change-language-spanish"
                          tabindex="0"
                          title="Spanish"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <img
                              alt="Spain flag"
                              class="img-root img-root"
                              src=""
                            />
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
                <ul
                  class="MuiList-root ForwardRef(MenuList)-root MuiList-padding"
                  role="menu"
                  tabindex="-1"
                >
                  <a
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root Component-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-testid="menuitem-monkis"
                    href="/front/monkis"
                    role="menuitem"
                    style="pointer-events: auto;"
                    tabindex="0"
                  >
                    <div
                      class="MuiBox-root MuiBox-root Component-root Component-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
                      title=""
                    >
                      <div
                        class="MuiListItemIcon-root WithStyles(ForwardRef(ListItemIcon))-root"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M7 2v11h3v9l7-12h-4l4-8z"
                          />
                        </svg>
                      </div>
                      <div
                        class="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
                      >
                        <span
                          class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
                        >
                          My monkis
                        </span>
                      </div>
                    </div>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root Component-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-testid="menuitem-settings"
                    href="/front/settings"
                    role="menuitem"
                    tabindex="-1"
                  >
                    <div
                      class="MuiListItemIcon-root WithStyles(ForwardRef(ListItemIcon))-root"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
                    >
                      <span
                        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
                      >
                        Account settings
                      </span>
                    </div>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <li
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root Component-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-testid="logout"
                    role="menuitem"
                    tabindex="-1"
                  >
                    <div
                      class="MuiListItemIcon-root WithStyles(ForwardRef(ListItemIcon))-root"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M10.09 15.59L11.5 17l5-5-5-5-1.41 1.41L12.67 11H3v2h9.67l-2.58 2.59zM19 3H5c-1.11 0-2 .9-2 2v4h2V5h14v14H5v-4H3v4c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
                    >
                      <span
                        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
                      >
                        Logout
                      </span>
                    </div>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </li>
                </ul>
              </div>
              <div
                data-test="sentinelEnd"
                tabindex="0"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiContainer-root Component-root Component-root MuiContainer-maxWidthMd"
  >
    <div
      class="MuiPaper-root Component-root Component-root MuiPaper-elevation1 MuiPaper-rounded"
    >
      <p
        class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-alignCenter"
      >
        Decrypting your information. Please, wait.
      </p>
      <p
        class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-alignCenter"
      >
        Calculating the time to decrypt your information...
      </p>
      <div
        class="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="MuiLinearProgress-root MuiLinearProgress-colorSecondary WithStyles(ForwardRef(LinearProgress))-root WithStyles(ForwardRef(LinearProgress))-root MuiLinearProgress-determinate"
          role="progressbar"
        >
          <div
            class="MuiLinearProgress-bar MuiLinearProgress-barColorSecondary MuiLinearProgress-bar1Determinate"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    aria-describedby="description"
    aria-labelledby="modal-title"
    class="ForwardRef(Modal)-root ForwardRef(Modal)-root"
    data-testid="modal-alert"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root WithStyles(ForwardRef(Backdrop))-root"
      style="opacity: 1; webkit-transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiPaper-root Component-root Component-root ForwardRef(Fade)-root MuiPaper-elevation5 MuiPaper-rounded"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <button
          aria-label="Close"
          class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
          tabindex="0"
          title="Close"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-colorSecondary"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <h3
        class="MuiTypography-root Component-root Component-root MuiTypography-h3"
      >
        What's new?
      </h3>
      <div
        class="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <div
          class="sc-bdVaJa imYUvI"
        >
          <div
            class="sc-bwzfXH gwZiig"
          >
            <div
              class="sc-htpNat grBOFc"
              style="transform: translateX(-16px);"
            >
              <div
                class="sc-bxivhb hQzVOE"
                width="0"
              >
                <div
                  class="MuiBox-root MuiBox-root Component-root Component-root"
                >
                  <img
                    class="img-root img-root"
                    src=""
                  />
                  <p
                    class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                  >
                    Session expired?
                  </p>
                  <p
                    class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                  >
                    You can now adjust the expiration time of your Passmonki login session. Check the settings
                  </p>
                </div>
              </div>
              <div
                class="sc-bxivhb fCKOWs"
                width="0"
              >
                <div
                  class="MuiBox-root MuiBox-root Component-root Component-root"
                >
                  <img
                    class="img-root img-root"
                    src=""
                  />
                  <p
                    class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                  >
                    Save time!
                  </p>
                  <p
                    class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                  >
                    Now you can import and export all your credentials
                  </p>
                </div>
              </div>
              <div
                class="sc-bxivhb fCKOWs"
                width="0"
              >
                <div
                  class="MuiBox-root MuiBox-root Component-root Component-root"
                >
                  <img
                    class="img-root img-root"
                    src=""
                  />
                  <p
                    class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                  >
                    MONKIS
                  </p>
                  <p
                    class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                  >
                    Create scripts that can perform an action when connected to a credential
                  </p>
                </div>
              </div>
              <div
                class="sc-bxivhb fCKOWs"
                width="0"
              >
                <div
                  class="MuiBox-root MuiBox-root Component-root Component-root"
                >
                  <img
                    class="img-root img-root"
                    src=""
                  />
                  <p
                    class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                  >
                    Hola!
                  </p>
                  <p
                    class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                  >
                    PassMonki is now also available in English and Spanish, look for the corresponding flag for each language
                  </p>
                </div>
              </div>
              <div
                class="sc-bxivhb fCKOWs"
                width="0"
              >
                <div
                  class="MuiBox-root MuiBox-root Component-root Component-root"
                >
                  <img
                    class="img-root img-root"
                    src=""
                  />
                  <p
                    class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                  >
                    Session expired?
                  </p>
                  <p
                    class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                  >
                    You can now adjust the expiration time of your Passmonki login session. Check the settings
                  </p>
                </div>
              </div>
              <div
                class="sc-bxivhb hARsAB"
                width="0"
              >
                <div
                  class="MuiBox-root MuiBox-root Component-root Component-root"
                >
                  <img
                    class="img-root img-root"
                    src=""
                  />
                  <p
                    class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                  >
                    Save time!
                  </p>
                  <p
                    class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                  >
                    Now you can import and export all your credentials
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-ifAKCX eoJMJt sc-EHOje fDBYnF"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
              tabindex="0"
              title="Next"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-colorSecondary"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M5.88 4.12L13.76 12l-7.88 7.88L8 22l10-10L8 2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
          <div
            class="sc-ifAKCX eoJMJt sc-bZQynM jlBBEG"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
              tabindex="0"
              title="Back"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-colorSecondary"
                  focusable="false"
                  style="transform: scaleX(-1);"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M5.88 4.12L13.76 12l-7.88 7.88L8 22l10-10L8 2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained Component-root Component-root MuiButton-containedSecondary MuiButton-containedSizeLarge MuiButton-sizeLarge"
        data-testid="button-news-modal-close"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          OK
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
  <div
    class="MuiBox-root MuiBox-root Component-root Component-root"
  >
    <button
      class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
      data-testid="iconButton-credentials-news-button"
      tabindex="0"
      title="Check our news"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <span
          class="MuiBadge-root Component-root Component-root"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 16H8v-2h8v2zm0-4H8v-2h8v2zm-3-5V3.5L18.5 9H13z"
            />
          </svg>
          <span
            class="MuiBadge-badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorSecondary MuiBadge-dot"
          />
        </span>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`testing Credentials component should snapshot works with portuguese language 1`] = `
<div
  aria-hidden="true"
>
  <div
    class="MuiBox-root MuiBox-root Component-root Component-root"
  >
    <div
      class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary Component-root Component-root mui-fixed MuiPaper-elevation4"
      style="padding-right: 16px;"
    >
      <div
        class="MuiToolbar-root MuiToolbar-regular WithStyles(ForwardRef(Toolbar))-root"
      >
        <div
          class="MuiContainer-root Component-root Component-root MuiContainer-maxWidthMd"
        >
          <div
            class="MuiBox-root MuiBox-root Component-root Component-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
            data-testid="button-header-logo"
            title="Para página principal"
          >
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover Component-root Component-root MuiTypography-colorPrimary"
              href="/front/credentials"
            >
              <img
                alt="Header logo"
                class="img-root img-root"
                src=""
              />
            </a>
          </div>
          <div
            class="MuiBox-root MuiBox-root Component-root Component-root"
          >
            <button
              aria-controls="menu"
              aria-haspopup="true"
              aria-label="Menu"
              class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
              data-testid="header-menu"
              tabindex="0"
              title="Menu"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <span
                  class="MuiBadge-root Component-root Component-root"
                  data-testid="badge-notifications"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                    />
                  </svg>
                  <span
                    class="MuiBadge-badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorSecondary MuiBadge-invisible"
                  >
                    0
                  </span>
                </span>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <div
              aria-hidden="true"
              class="MuiPopover-root WithStyles(ForwardRef(Popover))-root"
              data-testid="popover-invisible-div"
              id="menu"
              role="presentation"
              style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px; visibility: hidden;"
            >
              <div
                data-test="sentinelStart"
                tabindex="0"
              />
              <div
                class="MuiPaper-root MuiPopover-paper MuiPaper-elevation8 MuiPaper-rounded"
                style="opacity: 0; transform: scale(0.75, 0.5625); visibility: hidden;"
                tabindex="-1"
              >
                <div
                  class="MuiBox-root MuiBox-root Component-root Component-root"
                >
                  <div
                    class="MuiBox-root MuiBox-root Component-root Component-root"
                  >
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                    >
                      Nome de usuário
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-noWrap"
                    >
                      testecrudcredential
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                    >
                      Servidor
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-noWrap"
                    >
                      http://sso:3000
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                    >
                      Expira em
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                    >
                      15/06/2020 11:39
                    </p>
                    <div
                      class="MuiBox-root MuiBox-root Component-root Component-root"
                    >
                      <div
                        class="MuiBox-root MuiBox-root Component-root Component-root"
                      >
                        <button
                          aria-label="Português"
                          class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
                          data-testid="change-language-portuguese"
                          tabindex="0"
                          title="Português"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <img
                              alt="Bandeira do Brasil"
                              class="img-root img-root"
                              src=""
                            />
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-label="Inglês"
                          class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
                          data-testid="change-language-english"
                          tabindex="0"
                          title="Inglês"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <img
                              alt="Bandeira do Reino Unido"
                              class="img-root img-root"
                              src=""
                            />
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-label="Espanhol"
                          class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
                          data-testid="change-language-spanish"
                          tabindex="0"
                          title="Espanhol"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <img
                              alt="Bandeira da Espanha"
                              class="img-root img-root"
                              src=""
                            />
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
                <ul
                  class="MuiList-root ForwardRef(MenuList)-root MuiList-padding"
                  role="menu"
                  tabindex="-1"
                >
                  <a
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root Component-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-testid="menuitem-monkis"
                    href="/front/monkis"
                    role="menuitem"
                    style="pointer-events: auto;"
                    tabindex="0"
                  >
                    <div
                      class="MuiBox-root MuiBox-root Component-root Component-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
                      title=""
                    >
                      <div
                        class="MuiListItemIcon-root WithStyles(ForwardRef(ListItemIcon))-root"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M7 2v11h3v9l7-12h-4l4-8z"
                          />
                        </svg>
                      </div>
                      <div
                        class="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
                      >
                        <span
                          class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
                        >
                          Meus monkis
                        </span>
                      </div>
                    </div>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root Component-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-testid="menuitem-settings"
                    href="/front/settings"
                    role="menuitem"
                    tabindex="-1"
                  >
                    <div
                      class="MuiListItemIcon-root WithStyles(ForwardRef(ListItemIcon))-root"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
                    >
                      <span
                        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
                      >
                        Configurações da conta
                      </span>
                    </div>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <li
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root Component-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-testid="logout"
                    role="menuitem"
                    tabindex="-1"
                  >
                    <div
                      class="MuiListItemIcon-root WithStyles(ForwardRef(ListItemIcon))-root"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M10.09 15.59L11.5 17l5-5-5-5-1.41 1.41L12.67 11H3v2h9.67l-2.58 2.59zM19 3H5c-1.11 0-2 .9-2 2v4h2V5h14v14H5v-4H3v4c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
                    >
                      <span
                        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
                      >
                        Encerrar sessão
                      </span>
                    </div>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </li>
                </ul>
              </div>
              <div
                data-test="sentinelEnd"
                tabindex="0"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiContainer-root Component-root Component-root MuiContainer-maxWidthMd"
  >
    <div
      class="MuiPaper-root Component-root Component-root MuiPaper-elevation1 MuiPaper-rounded"
    >
      <p
        class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-alignCenter"
      >
        Desencriptando suas informações. Por favor, aguarde.
      </p>
      <p
        class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-alignCenter"
      >
        Calculando o tempo para desencriptar as suas informações...
      </p>
      <div
        class="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="MuiLinearProgress-root MuiLinearProgress-colorSecondary WithStyles(ForwardRef(LinearProgress))-root WithStyles(ForwardRef(LinearProgress))-root MuiLinearProgress-determinate"
          role="progressbar"
        >
          <div
            class="MuiLinearProgress-bar MuiLinearProgress-barColorSecondary MuiLinearProgress-bar1Determinate"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    aria-describedby="description"
    aria-labelledby="modal-title"
    class="ForwardRef(Modal)-root ForwardRef(Modal)-root"
    data-testid="modal-alert"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root WithStyles(ForwardRef(Backdrop))-root"
      style="opacity: 1; webkit-transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiPaper-root Component-root Component-root ForwardRef(Fade)-root MuiPaper-elevation5 MuiPaper-rounded"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <button
          aria-label="Fechar"
          class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
          tabindex="0"
          title="Fechar"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-colorSecondary"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <h3
        class="MuiTypography-root Component-root Component-root MuiTypography-h3"
      >
        Novidades
      </h3>
      <div
        class="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <div
          class="sc-bdVaJa imYUvI"
        >
          <div
            class="sc-bwzfXH gwZiig"
          >
            <div
              class="sc-htpNat grBOFc"
              style="transform: translateX(-16px);"
            >
              <div
                class="sc-bxivhb hQzVOE"
                width="0"
              >
                <div
                  class="MuiBox-root MuiBox-root Component-root Component-root"
                >
                  <img
                    class="img-root img-root"
                    src=""
                  />
                  <p
                    class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                  >
                    Sessão expirada?
                  </p>
                  <p
                    class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                  >
                    Agora você pode ajustar o tempo de expiração da sua sessão de acesso no Passmonki. Visite as configurações
                  </p>
                </div>
              </div>
              <div
                class="sc-bxivhb fCKOWs"
                width="0"
              >
                <div
                  class="MuiBox-root MuiBox-root Component-root Component-root"
                >
                  <img
                    class="img-root img-root"
                    src=""
                  />
                  <p
                    class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                  >
                    Economize tempo!
                  </p>
                  <p
                    class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                  >
                    Agora você pode importar e exportar suas credenciais
                  </p>
                </div>
              </div>
              <div
                class="sc-bxivhb fCKOWs"
                width="0"
              >
                <div
                  class="MuiBox-root MuiBox-root Component-root Component-root"
                >
                  <img
                    class="img-root img-root"
                    src=""
                  />
                  <p
                    class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                  >
                    MONKIS
                  </p>
                  <p
                    class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                  >
                    Crie scripts que podem executar uma ação quando se está ligado a uma credencial
                  </p>
                </div>
              </div>
              <div
                class="sc-bxivhb fCKOWs"
                width="0"
              >
                <div
                  class="MuiBox-root MuiBox-root Component-root Component-root"
                >
                  <img
                    class="img-root img-root"
                    src=""
                  />
                  <p
                    class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                  >
                    Hello!
                  </p>
                  <p
                    class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                  >
                    Agora o PassMonki também está disponível em Inglês e Espanhol, procure pela bandeira correspondente de cada língua
                  </p>
                </div>
              </div>
              <div
                class="sc-bxivhb fCKOWs"
                width="0"
              >
                <div
                  class="MuiBox-root MuiBox-root Component-root Component-root"
                >
                  <img
                    class="img-root img-root"
                    src=""
                  />
                  <p
                    class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                  >
                    Sessão expirada?
                  </p>
                  <p
                    class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                  >
                    Agora você pode ajustar o tempo de expiração da sua sessão de acesso no Passmonki. Visite as configurações
                  </p>
                </div>
              </div>
              <div
                class="sc-bxivhb hARsAB"
                width="0"
              >
                <div
                  class="MuiBox-root MuiBox-root Component-root Component-root"
                >
                  <img
                    class="img-root img-root"
                    src=""
                  />
                  <p
                    class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                  >
                    Economize tempo!
                  </p>
                  <p
                    class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                  >
                    Agora você pode importar e exportar suas credenciais
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-ifAKCX eoJMJt sc-EHOje fDBYnF"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
              tabindex="0"
              title="Próximo"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-colorSecondary"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M5.88 4.12L13.76 12l-7.88 7.88L8 22l10-10L8 2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
          <div
            class="sc-ifAKCX eoJMJt sc-bZQynM jlBBEG"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
              tabindex="0"
              title="Anterior"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-colorSecondary"
                  focusable="false"
                  style="transform: scaleX(-1);"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M5.88 4.12L13.76 12l-7.88 7.88L8 22l10-10L8 2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained Component-root Component-root MuiButton-containedSecondary MuiButton-containedSizeLarge MuiButton-sizeLarge"
        data-testid="button-news-modal-close"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          OK
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
  <div
    class="MuiBox-root MuiBox-root Component-root Component-root"
  >
    <button
      class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
      data-testid="iconButton-credentials-news-button"
      tabindex="0"
      title="Veja as novidades"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <span
          class="MuiBadge-root Component-root Component-root"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 16H8v-2h8v2zm0-4H8v-2h8v2zm-3-5V3.5L18.5 9H13z"
            />
          </svg>
          <span
            class="MuiBadge-badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorSecondary MuiBadge-dot"
          />
        </span>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`testing Credentials component should snapshot works with spanish language 1`] = `
<div
  aria-hidden="true"
>
  <div
    class="MuiBox-root MuiBox-root Component-root Component-root"
  >
    <div
      class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary Component-root Component-root mui-fixed MuiPaper-elevation4"
      style="padding-right: 16px;"
    >
      <div
        class="MuiToolbar-root MuiToolbar-regular WithStyles(ForwardRef(Toolbar))-root"
      >
        <div
          class="MuiContainer-root Component-root Component-root MuiContainer-maxWidthMd"
        >
          <div
            class="MuiBox-root MuiBox-root Component-root Component-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
            data-testid="button-header-logo"
            title="A la página principal"
          >
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover Component-root Component-root MuiTypography-colorPrimary"
              href="/front/credentials"
            >
              <img
                alt="Header logo"
                class="img-root img-root"
                src=""
              />
            </a>
          </div>
          <div
            class="MuiBox-root MuiBox-root Component-root Component-root"
          >
            <button
              aria-controls="menu"
              aria-haspopup="true"
              aria-label="Menu"
              class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
              data-testid="header-menu"
              tabindex="0"
              title="Menu"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <span
                  class="MuiBadge-root Component-root Component-root"
                  data-testid="badge-notifications"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                    />
                  </svg>
                  <span
                    class="MuiBadge-badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorSecondary MuiBadge-invisible"
                  >
                    0
                  </span>
                </span>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <div
              aria-hidden="true"
              class="MuiPopover-root WithStyles(ForwardRef(Popover))-root"
              data-testid="popover-invisible-div"
              id="menu"
              role="presentation"
              style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px; visibility: hidden;"
            >
              <div
                data-test="sentinelStart"
                tabindex="0"
              />
              <div
                class="MuiPaper-root MuiPopover-paper MuiPaper-elevation8 MuiPaper-rounded"
                style="opacity: 0; transform: scale(0.75, 0.5625); visibility: hidden;"
                tabindex="-1"
              >
                <div
                  class="MuiBox-root MuiBox-root Component-root Component-root"
                >
                  <div
                    class="MuiBox-root MuiBox-root Component-root Component-root"
                  >
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                    >
                      Nombre de usuario
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-noWrap"
                    >
                      testecrudcredential
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                    >
                      Servidor
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-noWrap"
                    >
                      http://sso:3000
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                    >
                      Expira a las
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                    >
                      15/06/2020 11:39
                    </p>
                    <div
                      class="MuiBox-root MuiBox-root Component-root Component-root"
                    >
                      <div
                        class="MuiBox-root MuiBox-root Component-root Component-root"
                      >
                        <button
                          aria-label="Portugués"
                          class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
                          data-testid="change-language-portuguese"
                          tabindex="0"
                          title="Portugués"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <img
                              alt="Bandera de Brasil"
                              class="img-root img-root"
                              src=""
                            />
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-label="Inglés"
                          class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
                          data-testid="change-language-english"
                          tabindex="0"
                          title="Inglés"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <img
                              alt="Bandera del Reino Unido"
                              class="img-root img-root"
                              src=""
                            />
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-label="Español"
                          class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
                          data-testid="change-language-spanish"
                          tabindex="0"
                          title="Español"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <img
                              alt="Bandera de España"
                              class="img-root img-root"
                              src=""
                            />
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
                <ul
                  class="MuiList-root ForwardRef(MenuList)-root MuiList-padding"
                  role="menu"
                  tabindex="-1"
                >
                  <a
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root Component-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-testid="menuitem-monkis"
                    href="/front/monkis"
                    role="menuitem"
                    style="pointer-events: auto;"
                    tabindex="0"
                  >
                    <div
                      class="MuiBox-root MuiBox-root Component-root Component-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
                      title=""
                    >
                      <div
                        class="MuiListItemIcon-root WithStyles(ForwardRef(ListItemIcon))-root"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M7 2v11h3v9l7-12h-4l4-8z"
                          />
                        </svg>
                      </div>
                      <div
                        class="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
                      >
                        <span
                          class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
                        >
                          Mis monkis
                        </span>
                      </div>
                    </div>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root Component-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-testid="menuitem-settings"
                    href="/front/settings"
                    role="menuitem"
                    tabindex="-1"
                  >
                    <div
                      class="MuiListItemIcon-root WithStyles(ForwardRef(ListItemIcon))-root"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
                    >
                      <span
                        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
                      >
                        Configuraciones de la cuenta
                      </span>
                    </div>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <li
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root Component-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-testid="logout"
                    role="menuitem"
                    tabindex="-1"
                  >
                    <div
                      class="MuiListItemIcon-root WithStyles(ForwardRef(ListItemIcon))-root"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M10.09 15.59L11.5 17l5-5-5-5-1.41 1.41L12.67 11H3v2h9.67l-2.58 2.59zM19 3H5c-1.11 0-2 .9-2 2v4h2V5h14v14H5v-4H3v4c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
                    >
                      <span
                        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
                      >
                        Deslogar
                      </span>
                    </div>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </li>
                </ul>
              </div>
              <div
                data-test="sentinelEnd"
                tabindex="0"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiContainer-root Component-root Component-root MuiContainer-maxWidthMd"
  >
    <div
      class="MuiPaper-root Component-root Component-root MuiPaper-elevation1 MuiPaper-rounded"
    >
      <p
        class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-alignCenter"
      >
        Descifrar sus informaciones. Por favor, espere.
      </p>
      <p
        class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-alignCenter"
      >
        Calcular el tiempo para descifrar sus informaciones...
      </p>
      <div
        class="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="MuiLinearProgress-root MuiLinearProgress-colorSecondary WithStyles(ForwardRef(LinearProgress))-root WithStyles(ForwardRef(LinearProgress))-root MuiLinearProgress-determinate"
          role="progressbar"
        >
          <div
            class="MuiLinearProgress-bar MuiLinearProgress-barColorSecondary MuiLinearProgress-bar1Determinate"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    aria-describedby="description"
    aria-labelledby="modal-title"
    class="ForwardRef(Modal)-root ForwardRef(Modal)-root"
    data-testid="modal-alert"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root WithStyles(ForwardRef(Backdrop))-root"
      style="opacity: 1; webkit-transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiPaper-root Component-root Component-root ForwardRef(Fade)-root MuiPaper-elevation5 MuiPaper-rounded"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <button
          aria-label="Cerrar"
          class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
          tabindex="0"
          title="Cerrar"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-colorSecondary"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <h3
        class="MuiTypography-root Component-root Component-root MuiTypography-h3"
      >
        ¿Qué hay de nuevo?
      </h3>
      <div
        class="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <div
          class="sc-bdVaJa imYUvI"
        >
          <div
            class="sc-bwzfXH gwZiig"
          >
            <div
              class="sc-htpNat grBOFc"
              style="transform: translateX(-16px);"
            >
              <div
                class="sc-bxivhb hQzVOE"
                width="0"
              >
                <div
                  class="MuiBox-root MuiBox-root Component-root Component-root"
                >
                  <img
                    class="img-root img-root"
                    src=""
                  />
                  <p
                    class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                  >
                    Sesión expirada
                  </p>
                  <p
                    class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                  >
                    Ahora puede ajustar el tiempo de vencimiento de su sesión de inicio de sesión de Passmonki. Visite los ajustes
                  </p>
                </div>
              </div>
              <div
                class="sc-bxivhb fCKOWs"
                width="0"
              >
                <div
                  class="MuiBox-root MuiBox-root Component-root Component-root"
                >
                  <img
                    class="img-root img-root"
                    src=""
                  />
                  <p
                    class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                  >
                    Guarde tiempo!
                  </p>
                  <p
                    class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                  >
                    Ahora puede importar y exportar sus credenciales
                  </p>
                </div>
              </div>
              <div
                class="sc-bxivhb fCKOWs"
                width="0"
              >
                <div
                  class="MuiBox-root MuiBox-root Component-root Component-root"
                >
                  <img
                    class="img-root img-root"
                    src=""
                  />
                  <p
                    class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                  >
                    MONKIS
                  </p>
                  <p
                    class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                  >
                    Cree scripts que puedan realizar una acción cuando esté conectado a una credencial
                  </p>
                </div>
              </div>
              <div
                class="sc-bxivhb fCKOWs"
                width="0"
              >
                <div
                  class="MuiBox-root MuiBox-root Component-root Component-root"
                >
                  <img
                    class="img-root img-root"
                    src=""
                  />
                  <p
                    class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                  >
                    Olá!
                  </p>
                  <p
                    class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                  >
                    PassMonki ahora también está disponible en inglés y español, busque la bandera correspondiente para cada idioma
                  </p>
                </div>
              </div>
              <div
                class="sc-bxivhb fCKOWs"
                width="0"
              >
                <div
                  class="MuiBox-root MuiBox-root Component-root Component-root"
                >
                  <img
                    class="img-root img-root"
                    src=""
                  />
                  <p
                    class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                  >
                    Sesión expirada
                  </p>
                  <p
                    class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                  >
                    Ahora puede ajustar el tiempo de vencimiento de su sesión de inicio de sesión de Passmonki. Visite los ajustes
                  </p>
                </div>
              </div>
              <div
                class="sc-bxivhb hARsAB"
                width="0"
              >
                <div
                  class="MuiBox-root MuiBox-root Component-root Component-root"
                >
                  <img
                    class="img-root img-root"
                    src=""
                  />
                  <p
                    class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                  >
                    Guarde tiempo!
                  </p>
                  <p
                    class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                  >
                    Ahora puede importar y exportar sus credenciales
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-ifAKCX eoJMJt sc-EHOje fDBYnF"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
              tabindex="0"
              title="Siguiente"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-colorSecondary"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M5.88 4.12L13.76 12l-7.88 7.88L8 22l10-10L8 2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
          <div
            class="sc-ifAKCX eoJMJt sc-bZQynM jlBBEG"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
              tabindex="0"
              title="Atras"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-colorSecondary"
                  focusable="false"
                  style="transform: scaleX(-1);"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M5.88 4.12L13.76 12l-7.88 7.88L8 22l10-10L8 2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained Component-root Component-root MuiButton-containedSecondary MuiButton-containedSizeLarge MuiButton-sizeLarge"
        data-testid="button-news-modal-close"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          OK
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
  <div
    class="MuiBox-root MuiBox-root Component-root Component-root"
  >
    <button
      class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
      data-testid="iconButton-credentials-news-button"
      tabindex="0"
      title="¿Qué hay de nuevo?"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <span
          class="MuiBadge-root Component-root Component-root"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 16H8v-2h8v2zm0-4H8v-2h8v2zm-3-5V3.5L18.5 9H13z"
            />
          </svg>
          <span
            class="MuiBadge-badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorSecondary MuiBadge-dot"
          />
        </span>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;
